<resources>
    <string name="app_name">Megawe</string>
    <string name="action_settings">Settings</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Daftar</string>
    <string name="back_to_login">Back to Login</string>
    <string name="cancel">Cancel</string>
    <string name="todo">TODO</string>
    <string name="pesan">Pesan</string>
    <string name="daftar">Daftar</string>

    <string-array name="level_user">
        <item>Pilih disini</item>
        <item>MEMBER</item>
        <item>PERUSAHAAN</item>
    </string-array>
</resources>