<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrasiActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="center"
                android:background="@drawable/bluegradient">



            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="20dp"

                >
                <LinearLayout
                    android:layout_marginBottom="30dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/whitebackground"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:paddingVertical="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Daftar"
                        android:textSize="30dp"
                        android:textColor="@color/colorMain"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:paddingVertical="20dp"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">





                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            app:errorEnabled="true">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextUserName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/username"
                                android:inputType="textPersonName" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="Masukkan password"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorMain">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextEmail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputLayoutPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:hint="Konfirmasi password"
                            app:errorEnabled="true"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorMain">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/editTextPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Ingin mendaftar sebagai?" />

                            <Spinner
                                android:id="@+id/levelSpinner"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:layout_marginLeft="1dp" />

                        </LinearLayout>

                        <LinearLayout

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <Button
                                android:id="@+id/daftar_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30dp"
                                android:layout_weight="1"
                                android:background="@drawable/buttonprimary"
                                android:text="@string/register" />

                            <TextView
                                android:id="@+id/textViewLogin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:gravity="center"
                                android:text="@string/back_to_login"
                                android:textColor="@android:color/white" />

                            <Button
                                android:id="@+id/cancel_button"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/buttonprimary"
                                android:text="@string/cancel" />

                            <TextView
                                android:id="@+id/textViewCancel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="10dp"
                                android:gravity="center"
                                android:text="@string/cancel"
                                android:textColor="@android:color/white" />

                        </LinearLayout>


                    </LinearLayout>





                </LinearLayout>


            </LinearLayout>



        </LinearLayout>


    </ScrollView>

</LinearLayout>